add some css and layout modify

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,10 @@
 
+<style>
+.navbar-more{
+  background-color: #fff;
+  height:20px;
+}
+</style>
 
 <!DOCTYPE html>
 <html>
@@ -52,15 +58,19 @@
             <% end %>
           </div>
       </div>
-    </nav>
-
+    <nav class="navbar-more navbar-default">
 
     <% if current_user %>
           <p>Hi, <%= current_user.name %></p><!-- 跟登入的使用者打招呼 -->
         <% end %>
 
-          <p class="notice"><%= notice %></p>
+    <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    </nav>
+
+
+
+    </nav>
 
 
 
@@ -75,7 +85,10 @@
 
     </div>
 
-    <footer class ="footer text-center">
+
+
+  <hr>
+  <footer class ="footer text-center">
       <br>
       <h5>吃甜甜</h5>
       <h5>Copyright © 2018 CSY cooperation</h5>
@@ -83,10 +96,8 @@
 
 
 
-
-
-
   </body>
+
 
 </html>
 
