--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -6,7 +6,7 @@
 <hr>
 
 <% if current_user.id == @dessert.user_id %>
-  <%= link_to 'Edit', edit_dessert_path(@dessert) %> | 
+  <%= link_to 'Edit', edit_dessert_path(@dessert) %> |
   <%= link_to 'Delete', dessert_path(@dessert), method: :delete, data: {confirm:"Are you sure?"} %> |
   <%= link_to '訂單狀況', dessert_orders_path(@dessert) %>
 
@@ -25,24 +25,14 @@
       </div>
 
 </div>
-<div class="col-md-4 ">
 
-<p>
-  <% if @dessert.amount != 0 && Time.now < @dessert.excess_time %>
-    還有 <%= @dessert.amount %> 個集資成功
-    <% if current_user.id != @dessert.user_id %>
-      <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
-    <% end %>
-  <% else %>
-    <strong><h3>集資結束</h3></strong>
-  <% end %>
+  <div class="col-md-4">
+    <h3>Introduction</h3>
 
-  <div class="col-md-5">
-    <h3><%= @dessert.name %></h3>
-    <p><%= image_tag @dessert.image_url(:thumb) if @dessert.image? %></p>
   </div>
 
-  <div class="col-md-5">
+  <div class="col-md-4">
+    <br>
     <p>創作者：
       <%= link_to user_path(@dessert.user) do %>
         <%= @dessert.user.name %>
@@ -176,4 +166,5 @@
   </script>
 
   <hr>
+</div>
 </div>
