add category select option to dessert new page and view for public users

--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -20,6 +20,9 @@
   <%= f.label :amount, 'Amount' %>
   <%= f.text_field :amount %>
   <br>
+  <%= f.label :category, "Area" %>
+  <%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %>
+  <br>
   <%= f.label :location, "Location" %>
   <%= f.text_field :location %>
   <br>
