--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -19,7 +19,7 @@
 
 <%= form_for [@dessert, @order] do |f| %>
   <%= f.label :amount, '訂購數量' %>
-  <%= f.text_field :amount %> *必填
+  <%= f.number_field :amount, options = {max: @dessert.amount, min: 1} %> *必填
   <br>
   <%= f.label :name, '訂購人姓名' %>
   <%= f.text_field :name %> *必填
