buyer only can input number in dessert order's phone form

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -25,7 +25,7 @@
   <%= f.text_field :name %> *必填
   <br>
   <%= f.label :phone, '訂購人電話' %>
-  <%= f.text_field :phone %> *必填
+  <%= f.number_field :phone %> *必填
   <br>
   <%= f.label :message, '留言給賣家' %>
   <%= f.text_area :message %>
