add bulma to css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,9 @@
 @import "orders";
 @import "replies";
 @import "css/style1.css";
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/elements/button.sass";
+
 
 
 html{
