add application layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,11 +22,12 @@
 @import "css/style1.css";
 @import "bulma/sass/utilities/_all.sass";
 @import "bulma/sass/elements/button.sass";
+@import "bulma/sass/grid/columns.sass";
 
 
 
 html{
-  font-size:62.5%
+  font-size:62.5%;
 }
 body{
   color: #333;
