--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JustDessert2</title>
+    <link rel="stylesheet" href="styles/debug.css">
   </head>
 
   <body>
@@ -32,9 +33,6 @@
         <%= link_to root_path do %>
           <%= image_tag "logo.png",class: "img-circle-navbar pull-left" %>
         <% end %>
-        <a class="button is-primary">
-          Button
-        </a>
 
         <!-- notice & alert 要放在navbar上 勿放進下拉選單 -->
 
