--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,8 @@
 @import "bulma/sass/utilities/_all.sass";
 @import "bulma/sass/elements/button.sass";
 @import "bulma/sass/grid/columns.sass";
+@import "style/debug.css";
+
 
 
 
