--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JustDessert2</title>
-    <link rel="stylesheet" href="styles/debug.css">
+    <!--<link rel="stylesheet" href="styles/debug.css">-->
   </head>
 
   <body>
