--- a/app/assets/stylesheets/desserts.scss
+++ b/app/assets/stylesheets/desserts.scss
@@ -3,6 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.main-dessert{
+  width:100%;
+  height:100%;
+  margin: 0px auto;
+}
+
+
 .panel-body {
     padding: 30px 2px;
     float: left;
