change text_field to number_field for price and amount in create new dessert form

--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -15,10 +15,10 @@
   <%= f.file_field :image %>
   <br>
   <%= f.label :price, 'Price' %>
-  <%= f.text_field :price %>
+  <%= f.number_field :price %>
   <br>
   <%= f.label :amount, 'Amount' %>
-  <%= f.text_field :amount %>
+  <%= f.number_field :amount %>
   <br>
   <%= f.label :category, "Area" %>
   <%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %>
