update application and index css

--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -84,7 +84,7 @@
     <% @categories.each do |category| %>
         <a><%= link_to category.area, category_path(category), class: "btn btn-2" %></a>
       <% end %>
-    <p class="btn btn-1"><a>New</a></p>
+    <a class="btn btn-1">新募資</a>
   </div>
 </nav>
    <div class= "container">
