--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,12 +80,11 @@ a:link, a:visited, a:hover, a:active {
 　height: 100px;
 　position: relative;
 　margin-top: -100px;
+  background-color:#FFE4E1;
 }
 
 
-.header,.main,.footer {
-  border-width:3px;border-style:dashed;border-color:#FFAC55;padding:2px;
-}
+
 .header,.footer {
   height: 80px;
 }
@@ -95,11 +94,15 @@ a:link, a:visited, a:hover, a:active {
 
 .img-circle-navbar{
 
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   border:5px solid #fff;
+  background-color:#FFE4E1;
+}
 
+.navbar{
+  background-color:#FFE4E1;
 }
 
 .img-dessert{
