add ig_image_url column to create new dessert form

--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -14,6 +14,9 @@
   <%= f.label :image, "Image" %>
   <%= f.file_field :image %>
   <br>
+  或在此貼上你甜點照片的ig網址
+  <%= f.text_field :ig_image_url %>
+  <br>
   <%= f.label :price, 'Price' %>
   <%= f.number_field :price %>
   <br>
