show ig image on dessert show page

--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -14,7 +14,7 @@
   <%= f.label :image, "Image" %>
   <%= f.file_field :image %>
   <br>
-  或在此貼上你甜點照片的ig網址
+  或在此貼上你甜點照片的ig網址(請擇一)
   <%= f.text_field :ig_image_url %>
   <br>
   <%= f.label :price, 'Price' %>
