--- a/app/views/desserts/edit.html.erb
+++ b/app/views/desserts/edit.html.erb
@@ -11,8 +11,14 @@
   <%= f.label :name, 'Name' %>
   <%= f.text_field :name %>
   <br>
-  <%= f.label :image, "Image" %>
-  <%= f.file_field :image %>
+  <% if @dessert.image %>
+    <%= f.label :image, "Image" %>
+    <%= f.file_field :image %>
+  <% end %>
+  <br>
+  <% if @dessert.ig_image_url %>
+    <%= f.text_field :ig_image_url %>
+  <% end %>
   <br>
   <%= f.label :description, 'Description' %>
   <%= f.text_area :description %>
