--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -14,6 +14,11 @@
 <div class="col-md-4 ">
   <div class="view view-first">
     <%= image_tag @dessert.image_url(:thumb) if @dessert.image? %>
+    
+    <% if @n.present? %>
+      <%= image_tag image_url("https://instagram.com/p/#{@n}/media/?size=m"), width: '250px' %>
+    <% end %>
+    
     <div class="mask">
       <h2><%= @dessert.name %></h2>
       <p>創作者：
