update user_show css

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,44 +1,43 @@
-<hr>
 
-<% if @user == current_user %>
-  <%= link_to 'Edit', edit_user_path %>
-<% end %>
 
-<br>
 
-<%= image_tag @user.avatar.url if @user.avatar? %>
+
+
+
+<div class="tile is-ancestor">
+  <div class="tile is-vertical is-8">
+    <div class="tile">
+      <div class="tile is-parent is-vertical">
+        <article class="tile is-child notification is-primary">
+          <p class="title"></p>
+          <p class="subtitle"><% if @user == current_user %>
+          <%= link_to 'Edit', edit_user_path %>
+          <% end %>
+
+        </p>
+        <%= image_tag @user.avatar.url if @user.avatar? %>
 <h3><%= @user.name %></h3>
 
 <p><%= @user.email %></p>
 <p><%= simple_format @user.intro %></p>
 
-<br>
-
-<% if @user == current_user %>
+        </article>
+        <article class="tile is-child notification is-warning">
+          <p class="title">...tiles</p>
+          <p class="subtitle">Bottom tile</p>
+        <% if @user == current_user %>
   <h5>給買家的話：</h5>
   <p><%= simple_format @user.contact_info %></p>
 <% end %>
-
-<hr>
-
-<% if @user == current_user %>
-  <h3>你發起的甜點集資</h3>
-<% else %>
-  <h3><%= @user.name %>發起的甜點集資</h3>
-<% end %>
-
-<% @desserts.each do |dessert| %>
-  <%= link_to dessert_path(dessert) do %>
-    <%= image_tag dessert.image.url if dessert.image? %>
-    <h4><%= dessert.name %></h4>
-  <% end %>
-<% end %>
-
-<% if @user == current_user %>
-  <hr>
-
-  <h3>你贊助的甜點集資</h3>
-
+        </article>
+      </div>
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-info">
+          <p class="title"><h3>你贊助的甜點集資</h3>
+</p>
+          <p class="subtitle">With an image</p>
+          <figure class="image is-4by3">
+            <% if @user == current_user %>
   <% @orders.each do |order| %>
     <%= link_to order_path(order) do %>
       <%= image_tag order.dessert.image.url if order.dessert.image? %>
@@ -46,3 +45,43 @@
     <% end %>
   <% end %>
 <% end %>
+          </figure>
+
+
+
+        </article>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child notification is-danger">
+        <p class="title">Wide tile</p>
+        <p class="subtitle">Aligned with the right tile</p>
+        <div class="content">
+          <!-- Content -->
+        </div>
+      </article>
+    </div>
+  </div>
+  <div class="tile is-parent">
+    <article class="tile is-child notification is-success">
+      <div class="content">
+        <p class="title"><h3>你發起的甜點集資</h3></p>
+        <p class="subtitle"></p>
+        <div class="content">
+          <!-- Content -->
+          <% if @user == current_user %>
+
+<% else %>
+  <h3><%= @user.name %>發起的甜點集資</h3>
+<% end %>
+<% @desserts.each do |dessert| %>
+  <%= link_to dessert_path(dessert) do %>
+    <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
+    <h4><%= dessert.name %></h4>
+  <% end %>
+<% end %>
+        </div>
+      </div>
+    </article>
+  </div>
+</div>
