--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,8 +30,9 @@
 @import "bulma/sass/elements/progress.sass";
 @import "bulma/sass/elements/form.sass";
 @import "bulma/sass/elements/container.sass";
-
-
+@import "bulma/sass/elements/image.sass";
+@import "bulma/sass/grid/_all.sass";
+@import "bulma/sass/grid/tiles.sass";
 
 
 html{
