remove additional index link from dessert show page

--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -67,8 +67,7 @@
     <% if current_user.id == @dessert.user_id %>
       <%= link_to 'Edit', edit_dessert_path(@dessert) %> | 
       <%= link_to 'Delete', dessert_path(@dessert), method: :delete, data: {confirm:"Are you sure?"} %> | 
-      <%= link_to '訂單狀況', dessert_orders_path(@dessert) %> | 
-      <%= link_to '回到前台首頁', root_path %>
+      <%= link_to '訂單狀況', dessert_orders_path(@dessert) %>
     <% end %>
 
     <p></p>
