--- a/app/views/desserts/edit.html.erb
+++ b/app/views/desserts/edit.html.erb
@@ -18,7 +18,7 @@
   <%= f.text_field :amount %>
   <br>
   <%= f.label :description, 'Description' %>
-  <%= f.text_area :description %>
+   <textarea class="textarea" placeholder="Textarea"></textarea>
   <br>
   <%= f.label :production_time, 'Production time' %>
   <%= f.text_field :production_time %>
