--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -1,3 +1,23 @@
+<style>
+    input[type="submit"]{padding:5px 15px; background:#ccc; border:0 none;
+cursor:pointer;
+-webkit-border-radius: 5px;
+border-radius: 5px; }
+
+    input[type="text"]{padding:5px 15px; border:2px black solid;
+cursor:pointer;
+-webkit-border-radius: 5px;
+border-radius: 5px; }
+
+.demo .container2{
+    padding-top: 50px;
+    text-align: center
+}
+</style>
+
+<div class="container2">
+
+
 <% if @dessert.errors.any? %>
   <h2>We have some errors here !</h2>
   <ul>
@@ -8,37 +28,51 @@
 <% end %>
 
 <%= form_for @dessert do |f| %>
-  <%= f.label :name, 'Name' %>
+  <%= f.label :name, 'Name   ' %>
+  <br>
   <%= f.text_field :name %>
   <br>
-  <%= f.label :image, "Image" %>
+  <%= f.label :image, "Image   " %>
+  <br>
   <%= f.file_field :image %>
   <br>
-  <%= f.label :price, 'Price' %>
+  <%= f.label :price, 'Price   ' %>
+  <br>
   <%= f.text_field :price %>
   <br>
-  <%= f.label :amount, 'Amount' %>
+  <%= f.label :amount, 'Amount   ' %>
+  <br>
   <%= f.text_field :amount %>
   <br>
-  <%= f.label :category, "Area" %>
+  <%= f.label :category, "Area   " %>
+  <br>
   <%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %>
   <br>
-  <%= f.label :location, "Location" %>
+  <%= f.label :location, "Location   " %>
+  <br>
   <%= f.text_field :location %>
   <br>
-  <%= f.label :description, 'Description' %>
+  <%= f.label :description, 'Description   ' %>
+  <br>
   <%= f.text_area :description %>
   <br>
-  <%= f.label :production_time, 'Production time' %>
+  <%= f.label :production_time, 'Production time   ' %>
+  <br>
   <%= f.text_field :production_time %>
   <br>
-  <%= f.label :excess_time, 'Excess time' %>
+  <%= f.label :excess_time, 'Excess time   ' %>
+  <br>
   <%= f.datetime_select :excess_time, default: Time.now %>
   <br>
-  <%= f.label :pick_time, 'Pick time' %>
+  <%= f.label :pick_time, 'Pick time   ' %>
+  <br>
   <%= f.datetime_select :pick_time, default: Time.now %>
   <br>
+  <br>
   <%= f.submit %>
+  <%= link_to '取消', desserts_path, class: "btn btn-default" %>
+
+</div>
 <% end %>
 
-<%= link_to '取消', desserts_path %>
+
