--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
           <% end %>
 
         </p>
-        <%= image_tag @user.avatar.url if @user.avatar? %>
+        <%= image_tag @user.avatar.url(:thumb) if @user.avatar? %>
 <h3><%= @user.name %></h3>
 
 <p><%= @user.email %></p>
